# Master_thesis_ergodic_learning

./: .gitignore  .~lock.Architecture_meeting.odp#  Architecture_meeting.odp  best_hyperparams_N_20260630_145232.json  master_benchmark.py  plot_coordinate_systems.py  plot_coordinate_systems_separated.py  run_all_shapes.sh  visualize_interactive.py  visualize_splines.py
CE_Ergodic/: ce_ergodic_2d.py
LB_Ergodic/: lb_ergodic_2d.py
OT_CFM/: ot_cfm_2d.py
SE3_SVGD/: ergodic_core.py  run_3d.py  run_3d.sh  svgd_bspline_2d.py  svgd_bspline_3d.py  svgd_engine.py  test_complexity.py  test_k_mapping.py  tsvec_2d.py  tsvec_3d.py
SigKernel_CMA/: sv_cma_es_2d.py
Stein_Flow_matching/: flow_matching_2d.py  flow_matching_bspline_2d.py  flow_matching_chebyshev_2d.py  flow_matching_rbf_2d.py  generate_alternatives.py  generate_gauss_bspline_dataset.py  run_all.sh  run_all_methods_shapes.sh
Unified_Pipeline/: __init__.py  bspline_trajectory.py  ensemble_generator.py  log_surrogate_mmd.py  signature_kernel_svgd.py  spline_cfm_trainer.py  unified_pipeline_2d.py
b_splines/: bsplines.py  ortho_splines.py
bsplinax-main/: .gitignore  .pre-commit-config.yaml  README.md  environment.yaml  pyproject.toml
bsplinax-main/bsplinax/: bspline.py  movement_primitive.py  phase_time.py
bsplinax-main/scripts/: fit_trajectory.py  plot_basis_functions.py  plot_bspline_2D.py  plot_phase_time.py
bsplinax-main/tests/: test_bspline.py
thesis_architecture/: README.md  flow_matching_cond_mpd_film_unet.py  flow_matching_cond_mpd_unet.py  flow_matching_cond_mpd_unet_char.py  flow_matching_test.py  (+4 more)
(+197 files in other folders)
